Refactor data aggregation